package com.ilike.classlearn;



/**
 * 动物
 *
 * @author sangweidong
 * @create 2019-08-15 11:47
 **/
public abstract class Animal {

    /**
     * 吃
     */
    void eat(){

    }

    /**
     * 睡
     */
    void sleep(){

    }

}
