package com.ilike.classlearn;



/**
 * 飞
 *
 * @author sangweidong
 * @create 2019-08-15 11:43
 **/
public interface Fly {
    /**
     * 怎样飞
     */
    void fly();

}
