package com.ilike.classlearn;



/**
 * 腿
 *
 * @author sangweidong
 * @create 2019-08-15 14:32
 **/
public class Leg {
    /**
     * 长度
     */
    private Integer length;

    public Integer getLength() {
        return length;
    }

    public void setLength(Integer length) {
        this.length = length;
    }
}
