package com.ilike.classlearn;



/**
 * 车轮
 *
 * @author sangweidong
 * @create 2019-08-15 14:21
 **/
public class Wheel {

    /**
     * 大小
     */
    private Integer size;
    /**
     * 重量
     */
    private Integer weight;

    public Integer getSize() {
        return size;
    }

    public void setSize(Integer size) {
        this.size = size;
    }

    public Integer getWeight() {
        return weight;
    }

    public void setWeight(Integer weight) {
        this.weight = weight;
    }
}
